# stereo-reconstruction-3dsmc

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/delivery_area/dslr_calibration_jpg/: cameras.txt  points3D.txt
dl_models/raft/: make_small_pair.py
include/: CustomDenseMatcher.h  CustomEightPoint.h  DataLoader.h  DenseStereoMatcher.h  DepthMapEvaluator.h  DepthReconstructor.h  SparseFeatureMatcher.h  StereoGeometryEstimator.h  StereoRectifier.h
scripts/: convert_raft_to_pipeline_depth.py  download_eth3d.py  evaluate_depth.py  raft_collab.ipynb  run_dust3r_depth.py  run_raft_depth.py  visualize_depth.m  visualize_disparity.m  visualize_evaluation.m  visualize_ground_truth.m  visualize_maps.py
src/: CustomDenseMatcher.cpp  CustomEightPoint.cpp  DataLoader.cpp  DenseStereoMatcher.cpp  DepthMapEvaluator.cpp  DepthReconstructor.cpp  SparseFeatureMatcher.cpp  StereoGeometryEstimator.cpp  StereoRectifier.cpp  main.cpp
